apps/fastapi-clientinfo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-clientinfo
  labels:
    app: fastapi-clientinfo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-clientinfo
  template:
    metadata:
      labels:
        app: fastapi-clientinfo
    spec:
      containers:
      - name: fastapi-clientinfo
        image: yingjunluo/fastapi-clientinfo:latest
        ports:
        - containerPort: 8000
