apps/fastapi-clientinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-clientinfo-service
  labels:
    app: fastapi-clientinfo
spec:
  selector:
    app: fastapi-clientinfo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
